--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             android:name="com.nbd.autofocus.TofService"
             android:enabled="true"
             android:exported="true">
+            <intent-filter>
+                <action android:name="com.nbd.autofocus.TofService"/>
+            </intent-filter>
         </service>
 
         <receiver
